# exp-release-tools

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release-binaries.yml  release-macos.reusable.yml  release-windows.reusable.yml
examples/: release.config.json
examples/github/: release-macos.yml  release-windows.yml
fixtures/mock-game/: README.md
maxion-protector/: .gitignore  BUILD.md  Cargo.toml  ISSUES.md  ORGANIZATION.md  README.md  VENDOR.md
maxion-protector/.cargo/: config.toml
maxion-protector/.github/workflows/: benchmark.yml  ci.yml  miri.yml  release.yml
maxion-protector/.handovers/: 001_cheat_callback_with_hwid.md  002_cpp_callback_demo.md  003_008_architecture_update.md  004_008_lightweight_sidecar_refactor.md  005_008_action_token_impl.md
maxion-protector/.handovers/005_008_plan_updates_pending/: STATUS.md
maxion-protector/.issues/: 001_cheat_callback_with_hwid.md
maxion-protector/crates/maxion-core/: Cargo.toml
maxion-protector/crates/maxion-core/examples/: README.md  auto_protected_demo.rs  cheat_callback_demo.rs  protected_bench.rs  simple_bench.rs  unprotected_bench.rs
maxion-protector/crates/maxion-core/src/: access_control.rs  archive.rs  archive_simple.rs  cheat_callback.rs  compression.rs  compression_parallel.rs  crypto.rs  error.rs  lib.rs  protected.rs  simd.rs  types.rs  virtual_archive.rs
maxion-protector/crates/maxion-core/src/cache/: mod.rs
maxion-protector/crates/maxion-core/src/context/: mod.rs
maxion-protector/crates/maxion-core/src/debug/: mod.rs
maxion-protector/crates/maxion-core/src/io/: mod.rs
maxion-protector/crates/maxion-gui/: Cargo.toml
maxion-protector/crates/maxion-gui/src/: app.rs  main.rs  model.rs  services.rs  theme.rs  view.rs
maxion-protector/crates/maxion-injector/: Cargo.toml  build.rs
maxion-protector/crates/maxion-injector/src/: lib.rs
maxion-protector/crates/maxion-injector/src/dll_loader/: import.rs  loader.rs  mod.rs
maxion-protector/crates/maxion-loader-stub/: Cargo.toml  build.rs
maxion-protector/crates/maxion-loader-stub/c/: loader_stub.c
maxion-protector/crates/maxion-loader-stub/src/: lib.rs
maxion-protector/crates/maxion-macros/: Cargo.toml
maxion-protector/crates/maxion-macros/src/: lib.rs
maxion-protector/crates/maxion-packer/: Cargo.toml  build.rs
maxion-protector/crates/maxion-packer/src/: lib.rs  main.rs  protection.rs
maxion-protector/crates/maxion-profiler/: Cargo.toml
maxion-protector/crates/maxion-profiler/src/: lib.rs
maxion-protector/crates/maxion-stub/: Cargo.toml
maxion-protector/crates/maxion-stub/src/: lib.rs
maxion-protector/docs/: QUICKSTART.md  README.md
maxion-protector/docs/00_overview/: 01_quickstart.md  README.md
maxion-protector/docs/01_architecture/: 01_reference.md  README.md
maxion-protector/docs/02_implementation/: README.md
maxion-protector/docs/03_miri/: 01_summary.md  README.md
maxion-protector/docs/04_testing/: 01_report.md  README.md
maxion-protector/docs/05_benchmark/: 01_protected_vs_unprotected.md  02_compressed_vs_uncompressed.md  03_phase5_optimization.md  04_trap_vs_notrap.md  05_trap_optimization_comparison.md  06_trap_overhead_summary.md  07_implementation_fixes.md  08_trap_overhead_analysis.md  README.md
maxion-protector/docs/05_benchmark/results/: 009_trap_benchmark_2025-01-24.md
maxion-protector/docs/06_security/: 006_trap.md  007_cheat_callback_summary.md  008_auto_protected.md  README.md
maxion-protector/docs/07_configurations/: README.md
maxion-protector/docs/08_troubleshooting/: README.md
maxion-protector/examples/: README.md
maxion-protector/examples/cheat-cpp-callback-demo/: CMakeLists.txt  README.md  callback_demo.cpp
maxion-protector/examples/hello-world/: Cargo.toml  build.rs
maxion-protector/examples/hello-world/src/: main.rs
maxion-protector/examples/protected-cpp-example/: AUTO_PROTECTED_CPP.md  auto_protected.h  auto_protected_demo.cpp
maxion-protector/examples/protected-cpp-example/assets/: public_config.json  secret_config.json
maxion-protector/examples/protected-cpp-example/scripts/: run_auto_protected_demo.sh
maxion-protector/examples/protected-vs-unprotected/: compare.sh
maxion-protector/plans/: 000_principle.md  001_plan.md  002_e2e_test.md  003_benchmark.md  004_simd.md  005_perf.md  006_honeypot.md  007_xigncode3.md  007a_research.md  007b_anti_cheat.md
maxion-protector/plans/008_xigncode3_impl/: 000_shared_types.md  001_storage_abstraction.md  002_client_consolidation.md  008a_client_foundation.md  008b_client_server_comm.md  008c_server_detection.md  008d_pattern_management.md  008e_ban_management.md  008f_analytics_monitoring.md  ARCHITECTURE_SUMMARY.md  README.md  TASKS.md
maxion-protector/scripts/: analyze_maxion_assets.sh  build_hello_world.sh  compile_stub.sh  extract_loader_stub.ps1  generate_test_assets.sh  organize_test_artifacts.sh  protect_hello_world.sh  run_all_tests.sh  run_benchmarks.sh  run_simple_bench.sh  test_maxion_phase1.sh
maxion-protector/scripts/windows/: analyze_benchmarks.ps1  build_hello_world.bat  organize_test_artifacts.ps1  protect_hello_world.bat  run_all_benchmarks.ps1  run_benchmarks.ps1  run_simple_bench.ps1
maxion-protector/test_artifacts/: .gitignore  CHANGELOG.md  README.md
maxion-protector/test_assets/: test2.txt
maxion-protector/tests/: crypto_benchmark.rs  debug_tests.rs  edge_cases.rs  integration_test.rs  pe_compatibility_windows.rs  phase5_integration_test.rs  phase6_integration_test.rs  virtual_archive_integration.rs
maxion-protector/tests/auto_protected_tests/: Cargo.toml
maxion-protector/tests/auto_protected_tests/src/: main.rs
maxion-protector/tests/benchmarks/: benchmark.rs
maxion-protector/tests/phase2/: full_dll_integration.rs  mod.rs
maxion-protector/tests/phase6_benchmarks/optimized/: trap_optimized_benchmark.rs
src/: archive.rs  channel.rs  config.rs  inject.rs  main.rs  manifest.rs  mock_build.rs  package.rs  protect.rs  r2_config.rs  resolve.rs  sync.rs  verify.rs  version_cmp.rs
templates/gitlab/: release-protector.yml
(+2 files in other folders)
