[package]
name = "maxgame-release"
version = "0.5.0"
edition = "2021"
rust-version = "1.91"
description = "Windows single-exe release engine (protect + deploy to R2)"
license = "MIT"

[[bin]]
name = "maxgame-release"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
hex = "0.4"
md-5 = "0.10"
mime_guess = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
