[package]
name = "maxion-protector-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
eframe = "0.31"
egui = "0.31"
goblin.workspace = true
rfd = "0.15"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tempfile.workspace = true
walkdir.workspace = true
